--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.blend filter=lfs diff=lfs merge=lfs -text
-*.jpg filter=lfs diff=lfs merge=lfs -text
-*.ttf filter=lfs diff=lfs merge=lfs -text
+*.blend filter=lfs diff=lfs merge=lfs binary
+*.jpg filter=lfs diff=lfs merge=lfs binary
+*.ttf filter=lfs diff=lfs merge=lfs binary
